# icloudpd-optimizer

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md
.github/workflows/: ci.yml
container/: Containerfile
packaging/homebrew/: icloudpd-optimizer.rb
packaging/macos/: ICloudPDOptimizerApp.swift  build-app.sh
scripts/: icloud_upload.py
src/: adjusted_source.rs  cli.rs  conversion.rs  conversion_backend.rs  conversion_execution.rs  lib.rs  local_mirror.rs  main.rs  manifest.rs  manifest_lock.rs  metrics.rs  monitor.rs  proof.rs  reconciliation.rs  service.rs  state_store.rs  upload.rs  workflow.rs
tests/: adjusted_source.rs  cli.rs  conversion.rs  manifest.rs  metrics.rs  proof.rs  reconciliation.rs  state_store.rs  upload.rs  workflow.rs
tests/fixtures/: failed-assets-quarantine-evidence.json
