[package]
name = "icloudpd-optimizer"
version = "0.1.0"
edition = "2024"
description = "Fail-closed iCloudPD RAW optimization helper"
license = "MIT"
repository = "https://github.com/bytware-alpha/icloudpd-optimizer"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
filetime = "0.2"
predicates = "3"
tempfile = "3"
