[package]
name = "icloudpd-optimizer"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Fail-closed iCloudPD RAW optimization helper"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bytware-alpha/icloudpd-optimizer"
keywords = ["icloud", "icloudpd", "photos", "raw", "heic"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
url = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2"
filetime = "0.2"
predicates = "3"
tempfile = "3"
